# rust-email

./: Cargo.toml
src/: address.rs  lib.rs
